--- a/.flowconfig
+++ b/.flowconfig
@@ -8,6 +8,7 @@ flow-typed
 [lints]
 
 [options]
-module.name_mapper='^\([^\.].*\)$' -> '<PROJECT_ROOT>/src/\1'
+module.system.node.resolve_dirname=node_modules
+module.system.node.resolve_dirname=src
 
 [strict]
